welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: Boolean(false) does not take parameters
		return false();
                            ^sleepIn:6: error: Boolean(true) does not take parameters
		return true();
                           ^sleepIn:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (weekday== false & vacation==true){
        ^